--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
         "sass": "^1.56.1",
         "trix": "^1.3.1",
         "vite": "^4.0.0"
+    },
+    "dependencies": {
+        "alpinejs": "^3.12.0"
     }
 }
