--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
         "laravel-vite-plugin": "^0.7.2",
         "sass": "^1.56.1",
         "trix": "^1.3.1",
-        "vite": "^4.0.0"
+        "vite": "^4.0.0",
+        "alpinejs": "^3.12.0"
     },
     "dependencies": {
-        "alpinejs": "^3.12.0"
+        
     }
 }
